Bug 459922 - Kinfocenter, Processors, does not show ISA's above SSE4
Summary: Kinfocenter, Processors, does not show ISA's above SSE4
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.25.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-02 19:00 UTC by Jeffrey Walton
Modified: 2024-01-10 16:57 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Screen capture of kinfocenter on Core i5-1035G1 (10th gen) (156.50 KB, image/png)
2022-10-02 19:00 UTC, Jeffrey Walton
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeffrey Walton 2022-10-02 19:00:43 UTC
Created attachment 152548 [details]
Screen capture of kinfocenter on Core i5-1035G1 (10th gen)

Hi Everyone.

Thanks for a very nice port to Fedora 36. I really like Fedora and the KDE combo.

I'm running kinfocenter. I noticed Processors shows upto SSE4.1/SSE4.2 as Supported Instruction Sets. On my Core i5-1035G1 (10th gen), the list of ISA is missing AVX, AVX2 and AVX512. It is also missing others interesting ISAs, like AES, SHA, RDRAND, RDSEED, ADX and BMI. But the AVX's are the important ones.

According to /proc/cpuinfo (and cleaned up with grep and fold), here is a list of ISAs for the processor:

    fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush
    dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx pdpe1gb rdtscp lm 
    constant_tsc art arch_perfmon pebs bts rep_good nopl xtopology nonstop_tsc 
    cpuid aperfmperf tsc_known_freq pni pclmulqdq dtes64 monitor ds_cpl vmx est tm2 
    ssse3 sdbg fma cx16 xtpr pdcm pcid sse4_1 sse4_2 x2apic movbe popcnt 
    tsc_deadline_timer aes xsave avx f16c rdrand lahf_lm abm 3dnowprefetch 
    cpuid_fault epb invpcid_single ssbd ibrs ibpb stibp ibrs_enhanced tpr_shadow 
    vnmi flexpriority ept vpid ept_ad fsgsbase tsc_adjust bmi1 avx2 smep bmi2 erms 
    invpcid avx512f avx512dq rdseed adx smap avx512ifma clflushopt intel_pt 
    avx512cd sha_ni avx512bw avx512vl xsaveopt xsavec xgetbv1 xsaves 
    split_lock_detect dtherm ida arat pln pts hwp hwp_notify hwp_act_window hwp_epp 
    hwp_pkg_req avx512vbmi umip pku ospke avx512_vbmi2 gfni vaes vpclmulqdq 
    avx512_vnni avx512_bitalg avx512_vpopcntdq rdpid fsrm md_clear flush_l1d 
    arch_capabilities

I'm guessing some interesting AMD processor ISAs may be missing, too. But I can't test it at the moment.

I attached a screenshot of kinfocenter's device information.

-----

$ plasmashell --version
plasmashell 5.25.5

$ cat /etc/os-release
NAME="Fedora Linux"
VERSION="36 (KDE Plasma)"
ID=fedora
VERSION_ID=36
VERSION_CODENAME=""
PLATFORM_ID="platform:f36"
PRETTY_NAME="Fedora Linux 36 (KDE Plasma)"
ANSI_COLOR="0;38;2;60;110;180"
LOGO=fedora-logo-icon
CPE_NAME="cpe:/o:fedoraproject:fedora:36"
HOME_URL="https://fedoraproject.org/"
DOCUMENTATION_URL="https://docs.fedoraproject.org/en-US/fedora/f36/system-administrators-guide/"
SUPPORT_URL="https://ask.fedoraproject.org/"
BUG_REPORT_URL="https://bugzilla.redhat.com/"
REDHAT_BUGZILLA_PRODUCT="Fedora"
REDHAT_BUGZILLA_PRODUCT_VERSION=36
REDHAT_SUPPORT_PRODUCT="Fedora"
REDHAT_SUPPORT_PRODUCT_VERSION=36
PRIVACY_POLICY_URL="https://fedoraproject.org/wiki/Legal:PrivacyPolicy"
VARIANT="KDE Plasma"
VARIANT_ID=kde
Comment 1 Shubham Arora 2023-12-13 14:49:30 UTC
Can we remove processor type device entirely from here? All the data shown here is already available under CPU. Supported Instructions set is also hard coded in the code.
Comment 2 Harald Sitter 2023-12-13 15:00:05 UTC
We sure could.
Comment 3 Bug Janitor Service 2023-12-13 15:09:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kinfocenter/-/merge_requests/177
Comment 4 Harald Sitter 2024-01-09 10:33:16 UTC
Git commit 083dfb23946688fc6e8f38b31855045b1dfce189 by Harald Sitter, on behalf of Shubham Arora.
Committed on 09/01/2024 at 11:31.
Pushed by sitter into branch 'master'.

devinfo: remove battery and processor info

Detailed processor and battery info is already included in CPU and Energy modules respectively.

M  +0    -12   Modules/devinfo/devicelisting.cpp
M  +1    -1    Modules/devinfo/devinfo.json
M  +1    -7    Modules/devinfo/soldevice.cpp
M  +1    -186  Modules/devinfo/soldevicetypes.cpp
M  +0    -24   Modules/devinfo/soldevicetypes.h
M  +0    -2    Modules/devinfo/solidhelper.cpp

https://invent.kde.org/plasma/kinfocenter/-/commit/083dfb23946688fc6e8f38b31855045b1dfce189