devinfo: remove battery and processor info

BUG: 459922

Detailed processor and battery info is already included in CPU and Energy modules respectively.